--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -12,6 +12,8 @@
     Source: <a href="https://www.webmd.com">https://www.webmd.com</a>
   </p>
 
+<img src="https://cdn.jsdelivr.net/gh/jonathandelasalas/BMI-Calculator@master/logo.png">
+
   <ion-item>
     <ion-label>Height in Meter: </ion-label>
     <ion-input type="number"[(ngModel)]="height"></ion-input>
